--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.1-alpha.19",
     "lodash": "^4.17.20",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
@@ -24,6 +25,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
@@ -32,7 +34,8 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-axios": "0.0.4"
+    "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-element-plus": "0.0.11"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
