添加进度条和动画

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^1.0.1-alpha.19",
     "lodash": "^4.17.20",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
