--- a/package.json
+++ b/package.json
@@ -8,40 +8,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "core-js": "^3.9.1",
     "dayjs": "^1.10.4",
     "echarts": "^5.0.2",
-    "element-plus": "^1.0.1-beta.27",
+    "element-plus": "^1.0.2-beta.35",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "qs": "^6.9.6",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "xe-utils": "^3.1.11"
+    "qs": "^6.10.1",
+    "vue": "^3.0.10",
+    "vue-router": "^4.0.5",
+    "vuex": "^4.0.0",
+    "xe-utils": "^3.1.12"
   },
   "devDependencies": {
-    "@vue/babel-plugin-jsx": "^1.0.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/babel-plugin-jsx": "^1.0.4",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-plugin-router": "^4.5.12",
+    "@vue/cli-plugin-vuex": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
+    "@vue/compiler-sfc": "^3.0.10",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "axios": "^0.18.0",
+    "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-component": "^1.1.1",
-    "compression-webpack-plugin": "^5.0.1",
+    "babel-plugin-import": "^1.13.3",
+    "compression-webpack-plugin": "^5.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.0.0-0",
+    "eslint-plugin-vue": "^7.8.0",
     "lint-staged": "^9.5.0",
     "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
-    "sass": "^1.32.2",
-    "sass-loader": "^10.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "uglifyjs-webpack-plugin": "^1.1.2",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-element-plus": "0.0.11"
   },
