--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "element_vue3.0",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "core-js": "^3.9.1",
-    "dayjs": "^1.10.4",
-    "echarts": "^5.0.2",
-    "element-plus": "^1.0.2-beta.35",
-    "normalize.css": "^8.0.1",
-    "nprogress": "^0.2.0",
-    "qs": "^6.10.1",
-    "vue": "^3.0.10",
-    "vue-router": "^4.0.5",
-    "vuex": "^4.0.0",
-    "xe-utils": "^3.1.12"
-  },
-  "devDependencies": {
-    "@vue/babel-plugin-jsx": "^1.0.4",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-plugin-router": "^4.5.12",
-    "@vue/cli-plugin-vuex": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
-    "@vue/compiler-sfc": "^3.0.10",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "axios": "^0.21.1",
-    "babel-eslint": "^10.1.0",
-    "babel-plugin-import": "^1.13.3",
-    "compression-webpack-plugin": "^5.0.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-vue": "^7.8.0",
-    "lint-staged": "^9.5.0",
-    "mockjs": "^1.1.0",
-    "prettier": "^1.19.1",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
-    "uglifyjs-webpack-plugin": "^1.1.2",
-    "vue-cli-plugin-axios": "0.0.4",
-    "vue-cli-plugin-element-plus": "0.0.11"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
-  }
+    "name": "vue3-element-admin",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lint": "vue-cli-service lint"
+    },
+    "dependencies": {
+        "core-js": "^3.9.1",
+        "dayjs": "^1.10.4",
+        "echarts": "^5.0.2",
+        "element-plus": "^1.0.2-beta.35",
+        "normalize.css": "^8.0.1",
+        "nprogress": "^0.2.0",
+        "qs": "^6.10.1",
+        "vue": "^3.0.10",
+        "vue-router": "^4.0.5",
+        "vuex": "^4.0.0",
+        "xe-utils": "^3.1.12"
+    },
+    "devDependencies": {
+        "@vue/babel-plugin-jsx": "^1.0.4",
+        "@vue/cli-plugin-babel": "^4.5.12",
+        "@vue/cli-plugin-eslint": "^4.5.12",
+        "@vue/cli-plugin-router": "^4.5.12",
+        "@vue/cli-plugin-vuex": "^4.5.12",
+        "@vue/cli-service": "^4.5.12",
+        "@vue/compiler-sfc": "^3.0.10",
+        "@vue/eslint-config-prettier": "^6.0.0",
+        "axios": "^0.21.1",
+        "babel-eslint": "^10.1.0",
+        "babel-plugin-import": "^1.13.3",
+        "compression-webpack-plugin": "^5.0.2",
+        "eslint": "^6.7.2",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-vue": "^7.8.0",
+        "lint-staged": "^9.5.0",
+        "mockjs": "^1.1.0",
+        "prettier": "^1.19.1",
+        "sass": "^1.32.8",
+        "sass-loader": "^10.1.1",
+        "uglifyjs-webpack-plugin": "^1.1.2",
+        "vue-cli-plugin-axios": "0.0.4",
+        "vue-cli-plugin-element-plus": "0.0.11"
+    },
+    "gitHooks": {
+        "pre-commit": "lint-staged"
+    },
+    "lint-staged": {
+        "*.{js,jsx,vue}": [
+            "vue-cli-service lint",
+            "git add"
+        ]
+    }
 }
