--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     },
     "lint-staged": {
         "*.{js,jsx,vue}": [
-            "vue-cli-service lint",
-            "git add"
+            "vue-cli-service lint --fix"
         ]
     }
 }
