--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-  "editor.formatOnSave": true,
-  "prettier.tabWidth": 4,
-  "editor.insertSpaces": false,
-  "prettier.arrowParens": "avoid",
-  "prettier.trailingComma": "none",
-  "vetur.format.options.tabSize": 4,
-  "editor.formatOnPaste": true,
-  "files.autoSaveDelay": 2000
+    "editor.formatOnSave": true,
+    "prettier.tabWidth": 4,
+    "editor.insertSpaces": false,
+    "vetur.format.options.tabSize": 4,
+    "editor.formatOnPaste": true,
+    "files.autoSaveDelay": 2000,
+    "prettier.endOfLine": "auto"
 }
