--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "core-js": "^3.15.2",
+        "core-js": "^3.16.1",
         "dayjs": "^1.10.6",
         "echarts": "^5.1.2",
-        "element-plus": "^1.0.2-beta.54",
+        "element-plus": "^1.0.2-beta.70",
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
         "qs": "^6.10.1",
-        "vue": "^3.1.4",
+        "vue": "^3.1.5",
         "vue-router": "^4.0.10",
         "vuex": "^4.0.2",
-        "xe-utils": "^3.3.0",
+        "xe-utils": "^3.3.1",
         "zdog": "^1.1.2"
     },
     "devDependencies": {
@@ -28,23 +28,24 @@
         "@vue/cli-plugin-router": "^4.5.13",
         "@vue/cli-plugin-vuex": "^4.5.13",
         "@vue/cli-service": "^4.5.13",
-        "@vue/compiler-sfc": "^3.1.4",
+        "@vue/compiler-sfc": "^3.1.5",
         "@vue/eslint-config-prettier": "^6.0.0",
         "axios": "^0.21.1",
         "babel-eslint": "^10.1.0",
         "babel-plugin-import": "^1.13.3",
-        "compression-webpack-plugin": "^5.0.2",
-        "eslint": "^6.7.2",
+        "compression-webpack-plugin": "^6.1.1",
+        "eslint": "^7.32.0",
         "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-vue": "^7.12.1",
-        "lint-staged": "^9.5.0",
+        "eslint-plugin-vue": "^7.15.1",
+        "lint-staged": "^11.1.2",
         "mockjs": "^1.1.0",
-        "prettier": "^1.19.1",
-        "sass": "^1.35.1",
+        "prettier": "^2.3.2",
+        "sass": "^1.37.5",
         "sass-loader": "^10.2.0",
-        "uglifyjs-webpack-plugin": "^1.1.2",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "vue-cli-plugin-axios": "0.0.4",
-        "vue-cli-plugin-element-plus": "0.0.11"
+        "vue-cli-plugin-element-plus": "0.0.13",
+        "webpack": "^4.46.0"
     },
     "gitHooks": {
         "pre-commit": "lint-staged"
