--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@element-plus/icons": "0.0.11",
         "core-js": "^3.16.1",
         "dayjs": "^1.10.6",
         "echarts": "^5.1.2",
