--- a/package.json
+++ b/package.json
@@ -9,43 +9,42 @@
     },
     "dependencies": {
         "@element-plus/icons": "0.0.11",
-        "core-js": "^3.16.1",
-        "dayjs": "^1.10.6",
-        "echarts": "^5.1.2",
-        "element-plus": "^1.0.2-beta.70",
+        "axios": "^0.23.0",
+        "core-js": "^3.18.3",
+        "dayjs": "^1.10.7",
+        "echarts": "^5.2.1",
+        "element-plus": "^1.1.0-beta.20",
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
         "qs": "^6.10.1",
-        "vue": "^3.1.5",
-        "vue-router": "^4.0.10",
+        "vue": "^3.2.20",
+        "vue-router": "^4.0.11",
         "vuex": "^4.0.2",
-        "xe-utils": "^3.3.1",
+        "xe-utils": "^3.4.0",
         "zdog": "^1.1.2"
     },
     "devDependencies": {
-        "@vue/babel-plugin-jsx": "^1.0.6",
+        "@vue/babel-plugin-jsx": "^1.1.0",
         "@vue/cli-plugin-babel": "^4.5.13",
         "@vue/cli-plugin-eslint": "^4.5.13",
         "@vue/cli-plugin-router": "^4.5.13",
         "@vue/cli-plugin-vuex": "^4.5.13",
         "@vue/cli-service": "^4.5.13",
-        "@vue/compiler-sfc": "^3.1.5",
+        "@vue/compiler-sfc": "^3.2.20",
         "@vue/eslint-config-prettier": "^6.0.0",
-        "axios": "^0.21.1",
         "babel-eslint": "^10.1.0",
-        "babel-plugin-import": "^1.13.3",
         "compression-webpack-plugin": "^6.1.1",
         "eslint": "^7.32.0",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-vue": "^7.15.1",
-        "lint-staged": "^11.1.2",
+        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-vue": "^7.19.1",
+        "lint-staged": "^11.2.3",
         "mockjs": "^1.1.0",
-        "prettier": "^2.3.2",
-        "sass": "^1.37.5",
+        "prettier": "^2.4.1",
+        "sass": "^1.43.2",
         "sass-loader": "^10.2.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
-        "vue-cli-plugin-axios": "0.0.4",
-        "vue-cli-plugin-element-plus": "0.0.13",
+        "vue-cli-plugin-axios": "^0.0.4",
+        "vue-cli-plugin-element-plus": "^0.0.13",
         "webpack": "^4.46.0"
     },
     "gitHooks": {
