--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     },
     "dependencies": {
         "@element-plus/icons": "0.0.11",
+        "@vueuse/core": "^7.4.0",
         "axios": "^0.24.0",
-        "core-js": "^3.19.1",
+        "core-js": "^3.20.0",
         "dayjs": "^1.10.7",
         "echarts": "^5.2.2",
         "element-plus": "^1.2.0-beta.3",
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
-        "qs": "^6.10.1",
-        "vue": "^3.2.21",
+        "qs": "^6.10.2",
+        "vue": "^3.2.26",
         "vue-router": "^4.0.12",
         "vuex": "^4.0.2",
-        "xe-utils": "^3.4.0",
+        "xe-utils": "^3.5.1",
         "zdog": "^1.1.2"
     },
     "devDependencies": {
@@ -30,7 +31,7 @@
         "@vue/cli-plugin-router": "^4.5.15",
         "@vue/cli-plugin-vuex": "^4.5.15",
         "@vue/cli-service": "^4.5.15",
-        "@vue/compiler-sfc": "^3.2.20",
+        "@vue/compiler-sfc": "^3.2.26",
         "@vue/eslint-config-prettier": "^6.0.0",
         "babel-eslint": "^10.1.0",
         "compression-webpack-plugin": "^6.1.1",
@@ -39,8 +40,8 @@
         "eslint-plugin-vue": "^7.20.0",
         "lint-staged": "^11.2.6",
         "mockjs": "^1.1.0",
-        "prettier": "^2.4.1",
-        "sass": "^1.43.4",
+        "prettier": "^2.5.1",
+        "sass": "^1.45.0",
         "sass-loader": "^10.2.0",
         "uglifyjs-webpack-plugin": "^2.2.0",
         "vue-cli-plugin-axios": "^0.0.4",
