--- a/package.json
+++ b/package.json
@@ -8,45 +8,45 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@element-plus/icons": "0.0.11",
-        "@vueuse/core": "^7.4.0",
-        "axios": "^0.24.0",
-        "core-js": "^3.20.0",
+        "@element-plus/icons-vue": "^0.2.6",
+        "@vueuse/core": "^7.5.3",
+        "axios": "^0.25.0",
+        "core-js": "^3.20.3",
         "dayjs": "^1.10.7",
         "echarts": "^5.2.2",
-        "element-plus": "^1.2.0-beta.3",
+        "element-plus": "^1.3.0-beta.5",
         "normalize.css": "^8.0.1",
         "nprogress": "^0.2.0",
-        "qs": "^6.10.2",
-        "vue": "^3.2.26",
+        "qs": "^6.10.3",
+        "vue": "^3.2.27",
         "vue-router": "^4.0.12",
         "vuex": "^4.0.2",
-        "xe-utils": "^3.5.1",
+        "xe-utils": "^3.5.2",
         "zdog": "^1.1.2"
     },
     "devDependencies": {
+        "@babel/eslint-parser": "^7.16.5",
         "@vue/babel-plugin-jsx": "^1.1.1",
-        "@vue/cli-plugin-babel": "^4.5.15",
-        "@vue/cli-plugin-eslint": "^4.5.15",
-        "@vue/cli-plugin-router": "^4.5.15",
-        "@vue/cli-plugin-vuex": "^4.5.15",
-        "@vue/cli-service": "^4.5.15",
-        "@vue/compiler-sfc": "^3.2.26",
-        "@vue/eslint-config-prettier": "^6.0.0",
-        "babel-eslint": "^10.1.0",
-        "compression-webpack-plugin": "^6.1.1",
-        "eslint": "^7.32.0",
-        "eslint-plugin-prettier": "^3.4.1",
-        "eslint-plugin-vue": "^7.20.0",
-        "lint-staged": "^11.2.6",
+        "@vue/cli-plugin-babel": "^5.0.0-rc.2",
+        "@vue/cli-plugin-eslint": "^5.0.0-rc.2",
+        "@vue/cli-plugin-router": "^5.0.0-rc.2",
+        "@vue/cli-plugin-vuex": "^5.0.0-rc.2",
+        "@vue/cli-service": "^5.0.0-rc.2",
+        "@vue/compiler-sfc": "^3.2.27",
+        "@vue/eslint-config-prettier": "^7.0.0",
+        "compression-webpack-plugin": "^9.2.0",
+        "eslint": "^8.7.0",
+        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-vue": "^8.3.0",
+        "lint-staged": "^12.2.1",
         "mockjs": "^1.1.0",
         "prettier": "^2.5.1",
-        "sass": "^1.45.0",
-        "sass-loader": "^10.2.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
+        "sass": "^1.49.0",
+        "sass-loader": "^12.4.0",
+        "terser-webpack-plugin": "^5.3.0",
         "vue-cli-plugin-axios": "^0.0.4",
         "vue-cli-plugin-element-plus": "^0.0.13",
-        "webpack": "^4.46.0"
+        "webpack": "^5.66.0"
     },
     "gitHooks": {
         "pre-commit": "lint-staged"
